no fixed header on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2798,3 +2798,9 @@ md-radio-button.md-checked .md-off{border-color: #000!important;}
   }
 
 }
+
+
+@media screen and (max-width: 960px){
+  .header-top-bar.fixed-head{position:static;}
+
+}
